# vision-injection-guard

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: plan.md  spec.md
src/vision_injection_guard/: __init__.py  detect.py  normalize.py  ocr.py  sensor.py
tests/: test_detect.py  test_integration.py  test_normalize.py  test_ocr.py  test_sensor.py
